REFACTOR : 같은 기능을 하는 코드 간결하게 변경